Initial Kryvexis site

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,5 @@
-LEAD_WEBHOOK_URL=https://script.google.com/macros/s/AKfycbztKDDai_AeFPVYJNhkAiHusmy4O5acQxffGfEDYCBkyR1ktAWiztL4zdcM7N-FniEa/exec
+## Where form submissions should be forwarded (Zapier/Make/Google Apps Script/your backend)
+LEAD_WEBHOOK_URL=https://YOUR-WEBHOOK-URL-HERE
+
+## Optional: set this in production for correct OG/Twitter URLs
+NEXT_PUBLIC_SITE_URL=https://your-domain.com
