--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.97.0",
+    "framer-motion": "11.0.28",
+    "lucide-react": "0.426.0",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "framer-motion": "11.0.28",
-    "lucide-react": "0.426.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.19",
