--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.19",
+    "gh-pages": "^6.3.0",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.7"
   }
